--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ env:
     - CIBW_BEFORE_BUILD="yum install -y clang"
     - CIBW_TEST_REQUIRES="nose2"
     - CIBW_TEST_COMMAND="cd {project}/tests && nose2"
+    - CIBW_SKIP="cp27-*"
+    - TWINE_USERNAME="mikedh"
 matrix:
   include:
     - dist: trusty
@@ -16,7 +18,13 @@ install:
   - if [ "${TRAVIS_OS_NAME:-}" == "osx" ]; then
       brew install python3;
     fi
-# Install cibuildwheel using pip3 to make sure Python 3 is used.
+  # Install cibuildwheel using pip3 to make sure Python 3 is used.
   - pip3 install cibuildwheel
 script:
+  - pip install cibuildwheel==0.9.2
   - cibuildwheel --output-dir wheelhouse
+  - |
+    if [[ $TRAVIS_TAG ]]; then
+      python -m pip install twine
+      python -m twine upload wheelhouse/*.whl
+    fi
