--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,5 @@ install:
 script:
   - pip install cibuildwheel==0.9.2
   - cibuildwheel --output-dir wheelhouse
-  - |
-    if [[ $TRAVIS_TAG ]]; then
-      python -m pip install twine
-      python -m twine upload wheelhouse/*.whl
-    fi
+  - python -m pip install twine
+  - python -m twine upload wheelhouse/*.whl
